# notemancy-lsp

./: Cargo.toml
src/: document.rs  formatter.rs  lib.rs  main.rs  parser.rs  server.rs  symbol.rs
src/handlers/: completion.rs  definition.rs  document_symbol.rs  hover.rs  mod.rs  workspace_symbol.rs
src/symbol/: markdown.rs
tests/: doc_symbols_test.rs
