[package]
name = "notemancy-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "io-std"] }
url = "2.5.4"
notemancy-core = { path = "../notemancy-core" }                                  # Assuming the core crate is in a sibling directory
